# timellama

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/timellama/: __init__.py  __main__.py  chat.py  cli.py  hours.py  mcp_client.py  ollama_client.py  sync.py
tests/: __init__.py  test_ollama_client.py  test_sync.py
